adding http server using echo with a fake account route

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,19 @@ services:
       context: .
       dockerfile: Dockerfile
     command: fresh
+    network_mode: host
     volumes:
       - .:/app
 #    depends_on:
 #      - bank-transaction-mysql
 
-  bank-transaction-mysql:
-    container_name: bank-transaction-mysql
-    image: mysql:5.7
-    environment:
-      MYSQL_ROOT_PASSWORD: "dev"
-      MYSQL_DATABASE: "dev"
-    ports:
-      - "3306:3306"
-    volumes:
-      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql:rw
+#  bank-transaction-mysql:
+#    container_name: bank-transaction-mysql
+#    image: mysql:5.7
+#    environment:
+#      MYSQL_ROOT_PASSWORD: "dev"
+#      MYSQL_DATABASE: "dev"
+#    ports:
+#      - "3306:3306"
+#    volumes:
+#      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql:rw
