--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,13 @@
 *.test
 tmp/
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the go coverage tool
 *.out
 cover.*
+report/
+.cover/
 
-# Dependency directories (remove the comment below to include it)
+# Dependency directories
 vendor/
 
 # IDE's
